--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ li{
 
 /*left column*/
 .profile{
-
+  padding: 0;
 }
 img{
   background-size: cover;
@@ -54,8 +54,16 @@ h1{ color: black;}
 .titles{
   color: #666666;
 }
-strong{
-
+h2{
+  text-align: center;
+}
+.details{
+  clear: both;
+  display: inline-block;
+  float: left;
+  padding: 15px;
+  width: 100%;
+  /*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 8px 16px rgba(0,0,0,0.24);*/
 }
 img{
   width: 100%;
