--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 .main::after{
   content:"";
   clear: both;
-  display: block;
+  display: inline-block;
 }
 [class*="col-"]{
   float: left;
@@ -21,6 +21,9 @@ body{
 @media only screen and (max-width:800px) {
   [class*="col-"]{
     width: 100%;
+    float: left;
+    margin: 4px;
+    padding: 7.5px
   }
 }
 /*for Desktop*/
@@ -44,7 +47,9 @@ li{
 
 /*left column*/
 .profile{
-
+  padding: 0;
+  clear: both;
+  display: inline-block;
 }
 img{
   background-size: cover;
@@ -53,12 +58,18 @@ h1{ color: black;}
 .titles{
   color: #666666;
 }
-strong{
-
-}
 img{
   width: 100%;
   height: auto;
+}
+h2{
+  text-align: center;
+}
+.details{
+  padding: 15px;
+  float: left;
+  margin: 0;
+  width: 100%;
 }
 /*right top column*/
 .experience{
@@ -76,3 +87,5 @@ footer{
   text-align: center;
   font-size: 11px;
 }
+
+      /*Kudos breakage!!*/
