--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body{
   [class*="col-"]{
     width: 100%;
     float: left;
-    margin: 4px;
+    margin: 0;
     padding: 7.5px
   }
 }
@@ -44,7 +44,13 @@ body{
 li{
   /*list-style-type: none;*/
 }
-
+a:link{
+  text-decoration: none;
+  color: black;
+}
+a:hover{
+  color: #6600cc;
+}
 /*left column*/
 .profile{
   padding: 0 !important;
@@ -54,7 +60,12 @@ li{
 img{
   background-size: cover;
 }
-h1{ color: black;}
+.name{
+  position: relative;
+  margin-top: 50%;
+  padding: 0;
+  margin: 0;
+}
 .titles{
   color: #666666;
 }
@@ -64,10 +75,6 @@ img{
 }
 h2{
   text-align: center;
-}
-.email{
-  font-style: italic;
-  text-decoration: none;
 }
 .details{
   padding: 15px;
@@ -79,17 +86,20 @@ h2{
 .experience{
 float: right;
 }
-.teal, footer{
+.icon-color{
   color: #6600cc;
+  font-weight: bold;
 }
 /*right bottom column*/
 .education{
 float: right;
 }
 /*footer*/
-footer{
+.footer{
+  clear: both;
+  margin: 0;
   text-align: center;
-  font-size: 11px;
+  font-size: 9px;
 }
 
       /*Kudos breakage!!*/
